# PointWorks

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  bash.exe.stackdump  note.md
.claude/: settings.local.json
.claude-skills/: algorithm-modules.md  build-system.md  core-components.md  development-guide.md  project-architecture.md  python-integration.md  ui-and-plugins.md
data/: 111.ctp  Cone.pcd  Cylinder.pcd  Plane.pcd  Sphere.pcd  cube.pcd  rabbit.e57  temple.ply  temple.stl  temple.vtk
docs/: 数据流管理结构分析.md  点云数据结构设计与内存分析.md
installer/: pointworks.iss
libs/algorithm/: CMakeLists.txt  csffilter.cpp  csffilter.h  distancecalculator.cpp  distancecalculator.h  features.cpp  features.h  filters.cpp  filters.h  keypoints.cpp  keypoints.h  normals.cpp  normals.h  registration.cpp  registration.h  segmentation.cpp  segmentation.h  surface.cpp  surface.h  utils.h  vegfilter.cpp  vegfilter.h
libs/core/: CMakeLists.txt  cloud.cpp  cloud.h  cloudtype.h  colormap.cpp  colormap.h  common.cpp  common.h  exports.h  field_types.h  octree.h  statistics.h  textured_mesh.h  view_params.h
libs/io/: CMakeLists.txt  fileio.cpp  fileio.h  fileio_mesh.cpp  fileio_pointcloud.cpp  projectfile.cpp  projectfile.h  textured_mesh.h
libs/python/: CMakeLists.txt  cloud_registry.cpp  cloud_registry.h  python_bindings.cpp  python_bridge.cpp  python_bridge.h  python_manager.cpp  python_manager.h  python_worker.cpp  python_worker.h
libs/python/bindings/: bind_appearance.cpp  bind_appearance.h  bind_cloud_mgmt.cpp  bind_cloud_mgmt.h  bind_common.h  bind_core.cpp  bind_core.h  bind_csf_veg.cpp  bind_csf_veg.h  bind_distance.cpp  bind_distance.h  bind_features.cpp  bind_features.h  bind_filters.cpp  bind_filters.h  bind_keypoints.cpp  bind_keypoints.h  bind_normals.cpp  bind_normals.h  bind_overlay.cpp  bind_overlay.h  bind_progress.cpp  bind_progress.h  bind_registration.cpp  bind_registration.h  bind_segmentation.cpp  bind_segmentation.h  bind_surface.cpp  bind_surface.h  bind_transform.cpp  bind_transform.h  bind_view.cpp  bind_view.h  mesh_utils.cpp  mesh_utils.h
libs/ui/: CMakeLists.txt
libs/ui/base/: cloud_io_controller.cpp  cloud_io_controller.h  cloudregistry.cpp  cloudregistry.h  cloudtree.cpp  cloudtree.h  customdialog.h  customdock.h  customtree.cpp  customtree.h  dialog_registry.cpp  dialog_registry.h  language_manager.cpp  language_manager.h  paramsnapshot.h  progress_manager.cpp  progress_manager.h  scenenodetype.h  viewport_manager.cpp  viewport_manager.h
libs/ui/dialog/: fieldmappingdialog.h  globalshiftdialog.cpp  globalshiftdialog.h  globalshiftdialog.ui  processingdialog.h  txtexportdialog.h  txtimportdialog.h
libs/ui/widgets/: sf_display_panel.cpp  sf_display_panel.h  sf_histogram_chart.cpp  sf_histogram_chart.h
libs/viz/: CMakeLists.txt  cloudview.cpp  cloudview.h  cloudview_data.cpp  console.cpp  console.h  octreerenderer.cpp  octreerenderer.h  scalar_bar_widget.cpp  scalar_bar_widget.h  surface_viz_helper.cpp  surface_viz_helper.h  viewcube.cpp  viewcube.h
src/: CMakeLists.txt
src/app/: help_launcher.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectmanager.cpp  projectmanager.h  python_connections.cpp  python_connections.h  recentprojects.h
src/edit/: boundingbox.cpp  boundingbox.h  boundingbox.ui  color.cpp  color.h  color.ui  coordinate.cpp  coordinate.h  coordinate.ui  normals.cpp  normals.h  normals.ui  scale.cpp  scale.h  transformation.cpp  transformation.h  transformation.ui
src/help/: help_launcher.cpp  help_launcher.h
src/options/: displaysettings.cpp  displaysettings.h  displaysettings_colors_page.cpp  displaysettings_colors_page.h  displaysettings_page.h  python_settings_page.cpp  python_settings_page.h
src/plugins/: changedetectplugin.cpp  changedetectplugin.h  changedetectplugin.ui  csfplugin.cpp  csfplugin.h  csfplugin.ui  m3c2plugin.cpp  m3c2plugin.h  m3c2plugin.ui  vegplugin.cpp  vegplugin.h  vegplugin.ui
src/python/: python_console.cpp  python_console.h  python_editor.cpp  python_editor.h
src/resources/: res.qrc
src/resources/trans/: zh_CN.qm  zh_CN.ts
src/tool/: align_by_centers.cpp  align_by_centers.h  boundary.cpp  boundary.h  cutting.cpp  cutting.h  cutting.ui  descriptor.cpp  descriptor.h  descriptor.ui  filters.cpp  filters.h  filters.ui  fine_registration.cpp  fine_registration.h  global_registration.cpp  global_registration.h  keypoints.cpp  keypoints.h  keypoints.ui  measure.cpp  measure.h  measure.ui  pickpoints.cpp  pickpoints.h  pickpoints.ui  point_pairs_alignment.cpp  point_pairs_alignment.h  rangeimage.cpp  rangeimage.h  registration.cpp  registration.h  registration.ui  sampling.cpp  sampling.h  sampling.ui  segmentation.cpp  segmentation.h  segmentation.ui  surface.cpp  (+2 more)
src/tool/align/: align_by_centers.cpp  align_by_centers.h  fine_registration.cpp  fine_registration.h  global_registration.cpp  global_registration.h  point_pairs_alignment.cpp  point_pairs_alignment.h
src/tool/distance/: closest_point_set_dialog.cpp  closest_point_set_dialog.h  cloud_cloud_dist_dialog.cpp  cloud_cloud_dist_dialog.h  cloud_mesh_dist_dialog.cpp  cloud_mesh_dist_dialog.h  cloud_primitive_dist_dialog.cpp  cloud_primitive_dist_dialog.h
src/tool/mesh/: compute_hull_dialog.cpp  compute_hull_dialog.h  extract_boundary_dialog.cpp  extract_boundary_dialog.h  reconstruct_surface_dialog.cpp  reconstruct_surface_dialog.h
src/tool/segmentation/: clustering_dialog.cpp  clustering_dialog.h  morphological_filter_dialog.cpp  morphological_filter_dialog.h  region_growing_dialog.cpp  region_growing_dialog.h  shape_detection_dialog.cpp  shape_detection_dialog.h  supervoxel_dialog.cpp  supervoxel_dialog.h
tests/: CMakeLists.txt
tests/algorithm/: CMakeLists.txt  test_distance.cpp  test_features.cpp  test_filters.cpp  test_keypoints.cpp  test_normals.cpp  test_registration.cpp  test_segmentation.cpp  test_surface.cpp
tests/common/: CMakeLists.txt  macros.h  test_helpers.cpp  test_helpers.h
tests/core/: CMakeLists.txt  test_cloud.cpp  test_cloudtype.cpp
tests/io/: CMakeLists.txt  test_fileio.cpp  test_formats.cpp
(+18 files in other folders)
